--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </table>
 </main>
 <footer>
-  <small>Tap Share → Add to Home Screen in Safari to install.</small>
+  <small>created by OPTi89 technologies → a division of john's auto repair (pro bono department).</small>
 </footer>
 </body>
 </html>
