--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <tr>
         <td class='empty'></td>
         <td><div class='day'>1</div><div class='shifts'>19-07 WHITE 07-19 WOOD</div></td>
-        <td><div class='day'>2</div><div class='shifts'>19-07 WHITE · 07-15 WOOD · 15-23 URBANY</div></td>
-        <td><div class='day'>3</div><div class='shifts'>23-07 MCCARDLE · 07-15 POT · 15-23 ARNOLD</div></td>
+        <td><div class='day'>2</div><div class='shifts'>19-07 WHITE 07-15 WOOD 15-23 URBANY</div></td>
+        <td><div class='day'>3</div><div class='shifts'>23-07 MCCARDLE 07-15 POT 15-23 ARNOLD</div></td>
         <td><div class='day'>4</div><div class='shifts'>23-07 MCCARDLE · 07-15 POT · 15-23 ARNOLD</div></td>
         <td><div class='day'>5</div><div class='shifts'>19-07 WHITE · 07-19 WOOD · 16-24 ARNOLD</div></td>
         <td><div class='day'>6</div><div class='shifts'>19-07 WHITE · 07-19 WOOD · 16-24 ARNOLD</div></td>
