--- a/index.html
+++ b/index.html
@@ -24,50 +24,285 @@
     </thead>
     <tbody>
       <tr>
-        <td class='empty'></td>
-        <td><div class='day'>1</div><div class='shifts'>19-07 WHITE 07-19 WOOD</div></td>
-        <td><div class='day'>2</div><div class='shifts'>19-07 WHITE 07-15 WOOD 15-23 URBANY</div></td>
-        <td><div class='day'>3</div><div class='shifts'>23-07 MCCARDLE 07-15 POT 15-23 ARNOLD</div></td>
-        <td><div class='day'>4</div><div class='shifts'>23-07 MCCARDLE · 07-15 POT · 15-23 ARNOLD</div></td>
-        <td><div class='day'>5</div><div class='shifts'>19-07 WHITE · 07-19 WOOD · 16-24 ARNOLD</div></td>
-        <td><div class='day'>6</div><div class='shifts'>19-07 WHITE · 07-19 WOOD · 16-24 ARNOLD</div></td>
-      </tr>
-      <tr>
-        <td><div class='day'>7</div><div class='shifts'>19-07 WHITE · 07-19 WOOD</div></td>
-        <td><div class='day'>8</div><div class='shifts'>19-07 POT · 07-15 MCCARDLE · 08-16 ARNOLD · 15-23 URBANY</div></td>
-        <td><div class='day'>9</div><div class='shifts'>23-07 POT · 07-19 MCCARDLE · 08-16 ARNOLD</div></td>
-        <td><div class='day'>10</div><div class='shifts'>19-07 WHITE · 07-19 WOOD · 08-16 ARNOLD</div></td>
-        <td><div class='day'>11</div><div class='shifts'>19-07 WHITE · 07-19 WOOD · 08-16 ARNOLD</div></td>
-        <td><div class='day'>12</div><div class='shifts'>19-07 POT · 07-19 MCCARDLE · 08-16 ARNOLD</div></td>
-        <td><div class='day'>13</div><div class='shifts'>19-07 POT · 07-19 MCCARDLE</div></td>
-      </tr>
-      <tr>
-        <td><div class='day'>14</div><div class='shifts'>19-07 POT · 07-19 MCCARDLE</div></td>
-        <td><div class='day'>15</div><div class='shifts'>19-07 WOOD · 07-19 WHITE</div></td>
-        <td><div class='day'>16</div><div class='shifts'>19-07 WOOD · 07-15 WHITE · 15-23 ARNOLD</div></td>
-        <td><div class='day'>17</div><div class='shifts'>19-07 POT · 07-19 MCCARDLE · 15-23 ARNOLD</div></td>
-        <td><div class='day'>18</div><div class='shifts'>23-07 POT · 07-15 MCCARDLE · 15-23 ARNOLD</div></td>
-        <td><div class='day'>19</div><div class='shifts'>23-07 WOOD · 07-19 WHITE · 16-24 ARNOLD</div></td>
-        <td><div class='day'>20</div><div class='shifts'>19-07 WOOD · 07-19 WHITE · 16-24 ARNOLD</div></td>
-      </tr>
-      <tr>
-        <td><div class='day'>21</div><div class='shifts'>19-07 WOOD · 07-19 WHITE</div></td>
-        <td><div class='day'>22</div><div class='shifts'>19-07 MCCARDLE · 07-19 POT · 08-16 ARNOLD</div></td>
-        <td><div class='day'>23</div><div class='shifts'>19-07 MCCARDLE · 07-19 POT · 08-16 ARNOLD</div></td>
-        <td><div class='day'>24</div><div class='shifts'>19-07 WOOD · 07-15 WHITE · 08-16 ARNOLD</div></td>
-        <td><div class='day'>25</div><div class='shifts'>19-07 WOOD · 07-15 WHITE · 08-16 ARNOLD</div></td>
-        <td><div class='day'>26</div><div class='shifts'>19-07 MCCARDLE · 07-19 POT · 08-16 ARNOLD</div></td>
-        <td><div class='day'>27</div><div class='shifts'>19-07 MCCARDLE · 07-19 POT</div></td>
-      </tr>
-      <tr>
-        <td><div class='day'>28</div><div class='shifts'>19-07 MCCARDLE · 07-19 POT · 08-16 ARNOLD</div></td>
-        <td><div class='day'>29</div><div class='shifts'>19-07 WHITE · 07-19 WOOD</div></td>
-        <td><div class='day'>30</div><div class='shifts'>19-07 WHITE · 07-19 WOOD · 15-23 ARNOLD</div></td>
-        <td class='empty'></td>
-        <td class='empty'></td>
-        <td class='empty'></td>
-        <td class='empty'></td>
-      </tr>
+  <td class='empty'></td>
+
+  <td>
+    <div class='day'>1</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-19 WOOD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>2</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-15 WOOD</div>
+      <div>15-23 URBANY</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>3</div>
+    <div class='shifts'>
+      <div>23-07 MCCARDLE</div>
+      <div>07-15 POT</div>
+      <div>15-23 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>4</div>
+    <div class='shifts'>
+      <div>23-07 MCCARDLE</div>
+      <div>07-15 POT</div>
+      <div>15-23 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>5</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-19 WOOD</div>
+      <div>16-24 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>6</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-19 WOOD</div>
+      <div>16-24 ARNOLD</div>
+    </div>
+  </td>
+</tr>
+
+<tr>
+  <td>
+    <div class='day'>7</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-19 WOOD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>8</div>
+    <div class='shifts'>
+      <div>19-07 POT</div>
+      <div>07-15 MCCARDLE</div>
+      <div>08-16 ARNOLD</div>
+      <div>15-23 URBANY</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>9</div>
+    <div class='shifts'>
+      <div>23-07 POT</div>
+      <div>07-19 MCCARDLE</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>10</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-19 WOOD</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>11</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-19 WOOD</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>12</div>
+    <div class='shifts'>
+      <div>19-07 POT</div>
+      <div>07-19 MCCARDLE</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>13</div>
+    <div class='shifts'>
+      <div>19-07 POT</div>
+      <div>07-19 MCCARDLE</div>
+    </div>
+  </td>
+</tr>
+
+<tr>
+  <td>
+    <div class='day'>14</div>
+    <div class='shifts'>
+      <div>19-07 POT</div>
+      <div>07-19 MCCARDLE</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>15</div>
+    <div class='shifts'>
+      <div>19-07 WOOD</div>
+      <div>07-19 WHITE</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>16</div>
+    <div class='shifts'>
+      <div>19-07 WOOD</div>
+      <div>07-15 WHITE</div>
+      <div>15-23 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>17</div>
+    <div class='shifts'>
+      <div>19-07 POT</div>
+      <div>07-19 MCCARDLE</div>
+      <div>15-23 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>18</div>
+    <div class='shifts'>
+      <div>23-07 POT</div>
+      <div>07-15 MCCARDLE</div>
+      <div>15-23 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>19</div>
+    <div class='shifts'>
+      <div>23-07 WOOD</div>
+      <div>07-19 WHITE</div>
+      <div>16-24 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>20</div>
+    <div class='shifts'>
+      <div>19-07 WOOD</div>
+      <div>07-19 WHITE</div>
+      <div>16-24 ARNOLD</div>
+    </div>
+  </td>
+</tr>
+
+<tr>
+  <td>
+    <div class='day'>21</div>
+    <div class='shifts'>
+      <div>19-07 WOOD</div>
+      <div>07-19 WHITE</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>22</div>
+    <div class='shifts'>
+      <div>19-07 MCCARDLE</div>
+      <div>07-19 POT</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>23</div>
+    <div class='shifts'>
+      <div>19-07 MCCARDLE</div>
+      <div>07-19 POT</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>24</div>
+    <div class='shifts'>
+      <div>19-07 WOOD</div>
+      <div>07-15 WHITE</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>25</div>
+    <div class='shifts'>
+      <div>19-07 WOOD</div>
+      <div>07-15 WHITE</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>26</div>
+    <div class='shifts'>
+      <div>19-07 MCCARDLE</div>
+      <div>07-19 POT</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>27</div>
+    <div class='shifts'>
+      <div>19-07 MCCARDLE</div>
+      <div>07-19 POT</div>
+    </div>
+  </td>
+</tr>
+
+<tr>
+  <td>
+    <div class='day'>28</div>
+    <div class='shifts'>
+      <div>19-07 MCCARDLE</div>
+      <div>07-19 POT</div>
+      <div>08-16 ARNOLD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>29</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-19 WOOD</div>
+    </div>
+  </td>
+
+  <td>
+    <div class='day'>30</div>
+    <div class='shifts'>
+      <div>19-07 WHITE</div>
+      <div>07-19 WOOD</div>
+      <div>15-23 ARNOLD</div>
+    </div>
+  </td>
+
+  <td class='empty'></td>
+  <td class='empty'></td>
+  <td class='empty'></td>
+  <td class='empty'></td>
+</tr>
+
     </tbody>
   </table>
 </main>
