--- a/index.html
+++ b/index.html
@@ -24,233 +24,54 @@
     </thead>
     <tbody>
       <tr>
-  <td class='empty'></td>
-
-  <td>
-    <div class='day'>1</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-19 WOOD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>2</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-15 WOOD</span><br><span>15-23 URBANY</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>3</div>
-    <div class='shifts'>
-      <span>23-07 MCCARDLE</span><br><span>07-15 POT</span><br><span>15-23 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>4</div>
-    <div class='shifts'>
-      <span>23-07 MCCARDLE</span><br><span>07-15 POT</span><br><span>15-23 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>5</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>16-24 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>6</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>16-24 ARNOLD</span>
-    </div>
-  </td>
+<td class='empty'></td>
+<td><div class='day'>1</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span></div></td>
+<td><div class='day'>2</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-15 WOOD</span><br><span>15-23 URBANY</span></div></td>
+<td><div class='day'>3</div><div class='shifts'><span>23-07 MCCARDLE</span><br><span>07-15 POT</span><br><span>15-23 ARNOLD</span></div></td>
+<td><div class='day'>4</div><div class='shifts'><span>23-07 MCCARDLE</span><br><span>07-15 POT</span><br><span>15-23 ARNOLD</span></div></td>
+<td><div class='day'>5</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>16-24 ARNOLD</span></div></td>
+<td><div class='day'>6</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>16-24 ARNOLD</span></div></td>
 </tr>
 
 <tr>
-  <td>
-    <div class='day'>7</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-19 WOOD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>8</div>
-    <div class='shifts'>
-      <span>19-07 POT</span><br><span>07-15 MCCARDLE</span><br><span>08-16 ARNOLD</span><br><span>15-23 URBANY</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>9</div>
-    <div class='shifts'>
-      <span>23-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>10</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>11</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>12</div>
-    <div class='shifts'>
-      <span>19-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>13</div>
-    <div class='shifts'>
-      <span>19-07 POT</span><br><span>07-19 MCCARDLE</span>
-    </div>
-  </td>
+<td><div class='day'>7</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span></div></td>
+<td><div class='day'>8</div><div class='shifts'><span>19-07 POT</span><br><span>07-15 MCCARDLE</span><br><span>08-16 ARNOLD</span><br><span>15-23 URBANY</span></div></td>
+<td><div class='day'>9</div><div class='shifts'><span>23-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>10</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>11</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>12</div><div class='shifts'><span>19-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>13</div><div class='shifts'><span>19-07 POT</span><br><span>07-19 MCCARDLE</span></div></td>
 </tr>
 
 <tr>
-  <td>
-    <div class='day'>14</div>
-    <div class='shifts'>
-      <span>19-07 POT</span><br><span>07-19 MCCARDLE</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>15</div>
-    <div class='shifts'>
-      <span>19-07 WOOD</span><br><span>07-19 WHITE</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>16</div>
-    <div class='shifts'>
-      <span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>15-23 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>17</div>
-    <div class='shifts'>
-      <span>19-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>15-23 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>18</div>
-    <div class='shifts'>
-      <span>23-07 POT</span><br><span>07-15 MCCARDLE</span><br><span>15-23 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>19</div>
-    <div class='shifts'>
-      <span>23-07 WOOD</span><br><span>07-19 WHITE</span><br><span>16-24 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>20</div>
-    <div class='shifts'>
-      <span>19-07 WOOD</span><br><span>07-19 WHITE</span><br><span>16-24 ARNOLD</span>
-    </div>
-  </td>
+<td><div class='day'>14</div><div class='shifts'><span>19-07 POT</span><br><span>07-19 MCCARDLE</span></div></td>
+<td><div class='day'>15</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-19 WHITE</span></div></td>
+<td><div class='day'>16</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>15-23 ARNOLD</span></div></td>
+<td><div class='day'>17</div><div class='shifts'><span>19-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>15-23 ARNOLD</span></div></td>
+<td><div class='day'>18</div><div class='shifts'><span>23-07 POT</span><br><span>07-15 MCCARDLE</span><br><span>15-23 ARNOLD</span></div></td>
+<td><div class='day'>19</div><div class='shifts'><span>23-07 WOOD</span><br><span>07-19 WHITE</span><br><span>16-24 ARNOLD</span></div></td>
+<td><div class='day'>20</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-19 WHITE</span><br><span>16-24 ARNOLD</span></div></td>
 </tr>
 
 <tr>
-  <td>
-    <div class='day'>21</div>
-    <div class='shifts'>
-      <span>19-07 WOOD</span><br><span>07-19 WHITE</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>22</div>
-    <div class='shifts'>
-      <span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>23</div>
-    <div class='shifts'>
-      <span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>24</div>
-    <div class='shifts'>
-      <span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>25</div>
-    <div class='shifts'>
-      <span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>26</div>
-    <div class='shifts'>
-      <span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>27</div>
-    <div class='shifts'>
-      <span>19-07 MCCARDLE</span><br><span>07-19 POT</span>
-    </div>
-  </td>
+<td><div class='day'>21</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-19 WHITE</span></div></td>
+<td><div class='day'>22</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>23</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>24</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>25</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>26</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>27</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span></div></td>
 </tr>
 
 <tr>
-  <td>
-    <div class='day'>28</div>
-    <div class='shifts'>
-      <span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>29</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-19 WOOD</span>
-    </div>
-  </td>
-
-  <td>
-    <div class='day'>30</div>
-    <div class='shifts'>
-      <span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>15-23 ARNOLD</span>
-    </div>
-  </td>
-
-  <td class='empty'></td>
-  <td class='empty'></td>
-  <td class='empty'></td>
-  <td class='empty'></td>
+<td><div class='day'>28</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span></div></td>
+<td><div class='day'>29</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span></div></td>
+<td><div class='day'>30</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>15-23 ARNOLD</span></div></td>
+<td class='empty'></td>
+<td class='empty'></td>
+<td class='empty'></td>
+<td class='empty'></td>
 </tr>
-
-
     </tbody>
   </table>
 </main>
