--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>Birmingham Twp PD — Sept 2025 Calendar</title>
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="style.css">
-  <link rel="apple-touch-icon" href="icon-192.png">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<title>Birmingham Twp PD — Sept 2025 Calendar</title>
+<link rel="manifest" href="manifest.json">
+<link rel="stylesheet" href="style.css">
+<link rel="apple-touch-icon" href="icon-192.png">
 </head>
 <body>
 <header>
-  <h1>September 2025</h1>
-  <p>Birmingham Twp PD Schedule</p>
+  <div class="header-content">
+    <h1>September 2025</h1>
+    <div id="menu-toggle">&#9776;</div>
+  </div>
+  <div id="menu" class="hidden">
+    <label for="person-select">Select Your Name:</label>
+    <select id="person-select">
+      <option value="">--Choose--</option>
+      <option value="NELLING">NELLING</option>
+      <option value="URBANY">URBANY</option>
+      <option value="ARNOLD">ARNOLD</option>
+      <option value="POT">POT</option>
+      <option value="MCCARDLE">MCCARDLE</option>
+      <option value="WOOD">WOOD</option>
+      <option value="WHITE">WHITE</option>
+    </select>
+  </div>
 </header>
+
 <main>
-  <table class="calendar">
+<table class="calendar">
 <thead>
 <tr>
 <th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th>
@@ -25,48 +41,48 @@
 <tbody>
 <tr>
 <td class='empty'></td>
-<td><div class='day'>1</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span></div></td>
-<td><div class='day'>2</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-15 WOOD</span><br><span>15-23 URBANY</span></div></td>
-<td><div class='day'>3</div><div class='shifts'><span>23-07 MCCARDLE</span><br><span>07-15 POT</span><br><span>15-23 ARNOLD</span></div></td>
-<td><div class='day'>4</div><div class='shifts'><span>23-07 MCCARDLE</span><br><span>07-15 POT</span><br><span>15-23 ARNOLD</span></div></td>
-<td><div class='day'>5</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>16-24 ARNOLD</span></div></td>
-<td><div class='day'>6</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>16-24 ARNOLD</span></div></td>
+<td><div class='day'>1</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
+<td><div class='day'>2</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="URBANY">15-23 URBANY</span></div></td>
+<td><div class='day'>3</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+<td><div class='day'>4</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+<td><div class='day'>5</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
+<td><div class='day'>6</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
 </tr>
 
 <tr>
-<td><div class='day'>7</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span></div></td>
-<td><div class='day'>8</div><div class='shifts'><span>19-07 POT</span><br><span>07-15 MCCARDLE</span><br><span>08-16 ARNOLD</span><br><span>15-23 URBANY</span></div></td>
-<td><div class='day'>9</div><div class='shifts'><span>23-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>10</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>11</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>12</div><div class='shifts'><span>19-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>13</div><div class='shifts'><span>19-07 POT</span><br><span>07-19 MCCARDLE</span></div></td>
+<td><div class='day'>7</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
+<td><div class='day'>8</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
+<td><div class='day'>9</div><div class='shifts'><span class="POT">23-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>10</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>11</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>12</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>13</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
 </tr>
 
 <tr>
-<td><div class='day'>14</div><div class='shifts'><span>19-07 POT</span><br><span>07-19 MCCARDLE</span></div></td>
-<td><div class='day'>15</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-19 WHITE</span></div></td>
-<td><div class='day'>16</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>15-23 ARNOLD</span></div></td>
-<td><div class='day'>17</div><div class='shifts'><span>19-07 POT</span><br><span>07-19 MCCARDLE</span><br><span>15-23 ARNOLD</span></div></td>
-<td><div class='day'>18</div><div class='shifts'><span>23-07 POT</span><br><span>07-15 MCCARDLE</span><br><span>15-23 ARNOLD</span></div></td>
-<td><div class='day'>19</div><div class='shifts'><span>23-07 WOOD</span><br><span>07-19 WHITE</span><br><span>16-24 ARNOLD</span></div></td>
-<td><div class='day'>20</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-19 WHITE</span><br><span>16-24 ARNOLD</span></div></td>
+<td><div class='day'>14</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
+<td><div class='day'>15</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
+<td><div class='day'>16</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+<td><div class='day'>17</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+<td><div class='day'>18</div><div class='shifts'><span class="POT">23-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+<td><div class='day'>19</div><div class='shifts'><span class="WOOD">23-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
+<td><div class='day'>20</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
 </tr>
 
 <tr>
-<td><div class='day'>21</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-19 WHITE</span></div></td>
-<td><div class='day'>22</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>23</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>24</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>25</div><div class='shifts'><span>19-07 WOOD</span><br><span>07-15 WHITE</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>26</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>27</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span></div></td>
+<td><div class='day'>21</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
+<td><div class='day'>22</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>23</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>24</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>25</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>26</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>27</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
 </tr>
 
 <tr>
-<td><div class='day'>28</div><div class='shifts'><span>19-07 MCCARDLE</span><br><span>07-19 POT</span><br><span>08-16 ARNOLD</span></div></td>
-<td><div class='day'>29</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span></div></td>
-<td><div class='day'>30</div><div class='shifts'><span>19-07 WHITE</span><br><span>07-19 WOOD</span><br><span>15-23 ARNOLD</span></div></td>
+<td><div class='day'>28</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+<td><div class='day'>29</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
+<td><div class='day'>30</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
 <td class='empty'></td>
 <td class='empty'></td>
 <td class='empty'></td>
@@ -75,8 +91,45 @@
 </tbody>
 </table>
 </main>
+
 <footer>
-  <small>created by OPTi89 technologies → a division of john's auto repair (pro bono department)</small>
+<small>created by OPTi89 technologies → a division of john's auto repair (pro bono department)</small>
 </footer>
+
+<script>
+const menuToggle = document.getElementById('menu-toggle');
+const menu = document.getElementById('menu');
+const select = document.getElementById('person-select');
+
+
+menuToggle.addEventListener('click', () => {
+  menu.classList.toggle('hidden');
+});
+
+
+const savedPerson = localStorage.getItem('selectedPerson');
+if (savedPerson) {
+  select.value = savedPerson;
+  highlightShifts(savedPerson);
+}
+
+
+select.addEventListener('change', () => {
+  const person = select.value;
+  localStorage.setItem('selectedPerson', person);
+  highlightShifts(person);
+});
+
+function highlightShifts(person) {
+  document.querySelectorAll('.shifts span').forEach(span => {
+    span.classList.remove('highlighted');
+  });
+  if (person) {
+    document.querySelectorAll(`.shifts span.${person}`).forEach(span => {
+      span.classList.add('highlighted');
+    });
+  }
+}
+</script>
 </body>
 </html>
