--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <p>Birmingham Twp PD Schedule</p>
       </div>
       <div class="header-right">
-        <img src="placeholder.png" alt="Logo" class="header-logo">
+        <img src="patch.png" alt="Logo" class="header-logo">
       </div>
     </div>
 
