--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         <div id="menu-toggle">&#9776;</div>
       </div>
       <div class="header-center">
-        <h1>September 2025</h1>
-        <p>Birmingham Twp PD Schedule</p>
+        <h1>Birmingham Twp PD ScheduleSeptember 2025</h1>
+        <p>September 2025</p>
       </div>
       <div class="header-right">
         <img src="patch.png" alt="Logo" class="header-logo">
