--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       text-align: center;
     }
 
-    .header-center h1 { margin: 0; font-size: 22px; }
+    .header-center h1 { margin: 0; font-size: 20px; }
     .header-center p { margin: 0; font-size: 14px; opacity: 0.9; }
 
     #menu-toggle {
@@ -141,7 +141,7 @@
         <div id="menu-toggle">&#9776;</div>
       </div>
       <div class="header-center">
-        <h1>Birmingham Twp PD ScheduleSeptember 2025</h1>
+        <h1>Birmingham Twp PD Schedule</h1>
         <p>September 2025</p>
       </div>
       <div class="header-right">
