--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     }
 
     .header-center h1 { margin: 0; font-size: 14px; opacity: 0.9; }
+    .header-center h2 { margin: 0; font-size: 14px; opacity: 0.9; }
     .header-center p { margin: 0; font-size: 20px;  }
 
     #menu-toggle {
