--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>Birmingham Twp PD — Sept 2025 Calendar</title>
+  <title>BPD Skedge JAWN</title>
   
   <link rel="apple-touch-icon" href="patch.png">
   <link rel="apple-touch-icon" sizes="152x152" href="patch.png">
@@ -227,57 +227,58 @@
 <table class="calendar">
   <thead>
     <tr>
-      <th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th>
+      <th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th>
+      <th>Thu</th><th>Fri</th><th>Sat</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td class='empty'></td>
       <td class='empty'></td>
+      <td class='empty'></td>
       <td><div class='day'>1</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>2</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>3</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>4</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
-      <td><div class='day'>5</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
     </tr>
 
     <tr>
+      <td><div class='day'>5</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td><div class='day'>6</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
       <td><div class='day'>7</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>8</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>9</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>10</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>11</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
-      <td><div class='day'>12</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
     </tr>
 
     <tr>
+      <td><div class='day'>12</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
       <td><div class='day'>13</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
       <td><div class='day'>14</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>15</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>16</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>17</div><div class='shifts'><span class="WOOD">23-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
       <td><div class='day'>18</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
-      <td><div class='day'>19</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
     </tr>
 
     <tr>
+      <td><div class='day'>19</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
       <td><div class='day'>20</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>21</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>22</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>23</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>24</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>25</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
-      <td><div class='day'>26</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
     </tr>
 
     <tr>
+      <td><div class='day'>26</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
       <td><div class='day'>27</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td><div class='day'>28</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>29</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>30</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-      <td class='empty'></td>
-      <td class='empty'></td>
+      <td><div class='day'>31</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span><span class="NELLING">15-23 NELLING</span></div></td>
       <td class='empty'></td>
     </tr>
   </tbody>
