--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </tr>
       </tbody>
     </table>
-<h1>October 2025</h1>
+<div class="month-header">October 2025</div>
 <table class="calendar">
   <thead>
     <tr>
