--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>BPD Skedge JAWN</title>
+  <title>65schedule</title>
   
   <link rel="apple-touch-icon" href="patch.png">
   <link rel="apple-touch-icon" sizes="152x152" href="patch.png">
