--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>65 - Login</title>
+  <title>login</title>
   <style>
     body {
       font-family: Consolas, monospace;
@@ -77,6 +77,11 @@
       <p class="error" id="errorMsg">Invalid login. Try again.</p>
     </form>
   </div>
+
+  <footer>
+  <small>created by OPTi89 technologies → a division of john's auto repair (pro bono department)</small>
+</footer>
+
 
   <script>
     
