--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
       <button type="submit">enter</button>
       <p class="error" id="errorMsg">Invalid login. Try again.</p>
     </form>
-  </div>
+    </div>
+  </main>
 
   <footer>
-  <small>created by OPTi89 technologies → a division of john's auto repair (pro bono department)</small>
-</footer>
-
+    <small>created by OPTi89 technologies → a division of john's auto repair (pro bono department)</small>
+  </footer>
 
   <script>
     
