--- a/index.html
+++ b/index.html
@@ -76,8 +76,12 @@
       <button type="submit">enter</button>
       <p class="error" id="errorMsg">Invalid login. Try again.</p>
     </form>
-    <p class="attribution">created by OPTi89 technologies → a division of john's auto repair (pro bono department)</p>
-    </div>
+    </form>
+
+  <p class="footer-credit">
+    created by OPTi89 technologies → a division of john's auto repair (pro bono department)
+  </p>
+</div>
   </main>
 
   <script>
