--- a/schedule.html
+++ b/schedule.html
@@ -173,66 +173,6 @@
       </thead>
       <tbody>
        <tr>
-          <td class='empty'></td>
-<td><div class='day'>1</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
-<td><div class='day'>2</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="URBANY">15-23 URBANY</span></div></td>
-<td><div class='day'>3</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-<td><div class='day'>4</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-<td><div class='day'>5</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
-<td><div class='day'>6</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
-</tr>
-
-<tr>
-<td><div class='day'>7</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
-<td><div class='day'>8</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
-<td><div class='day'>9</div><div class='shifts'><span class="POT">23-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>10</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>11</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>12</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>13</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
-</tr>
-
-<tr>
-<td><div class='day'>14</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
-<td><div class='day'>15</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
-<td><div class='day'>16</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-<td><div class='day'>17</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-<td><div class='day'>18</div><div class='shifts'><span class="POT">23-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-<td><div class='day'>19</div><div class='shifts'><span class="WOOD">23-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
-<td><div class='day'>20</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
-</tr>
-
-<tr>
-<td><div class='day'>21</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
-<td><div class='day'>22</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>23</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>24</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>25</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>26</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>27</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
-</tr>
-
-<tr>
-<td><div class='day'>28</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-<td><div class='day'>29</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
-<td><div class='day'>30</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-<td class='empty'></td>
-<td class='empty'></td>
-<td class='empty'></td>
-<td class='empty'></td>
-        </tr>
-      </tbody>
-    </table>
-<div class="month-header">October 2025</div>
-<table class="calendar">
-  <thead>
-    <tr>
-      <th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th>
-      <th>Thu</th><th>Fri</th><th>Sat</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
       <td class='empty'></td>
       <td class='empty'></td>
       <td class='empty'></td>
@@ -281,10 +221,9 @@
       <td><div class='day'>31</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span><span class="NELLING">15-23 NELLING</span></div></td>
       <td class='empty'></td>
     </tr>
-  </tbody>
-</table>
-
-<div class="month-header">November 2025</div>
+      </tbody>
+    </table>
+<div class="month-header">October 2025</div>
 <table class="calendar">
   <thead>
     <tr>
@@ -293,7 +232,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
+     <tr>
       <td class="empty"></td>
       <td class="empty"></td>
       <td class="empty"></td>
@@ -351,6 +290,77 @@
       <td class="empty"></td>
       <td class="empty"></td>
       <td class="empty"></td>
+    </tr>
+  </tbody>
+</table>
+
+<div class="month-header">November 2025</div>
+<table class="calendar">
+  <thead>
+    <tr>
+      <th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th>
+      <th>Thu</th><th>Fri</th><th>Sat</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="empty"></td>
+      <td class="empty"></td>
+      <td class="empty"></td>
+      <td class="empty"></td>
+      <td class="empty"></td>
+      <td class="empty"></td>
+      <td><div class="day">1</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
+    </tr>
+
+        <tr>
+      <td class='empty'></td>
+      <td><div class='day'>1</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
+      <td><div class='day'>2</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>3</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>4</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>5</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>6</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
+    </tr>
+
+    <tr>
+      <td><div class='day'>7</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
+      <td><div class='day'>8</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
+      <td><div class='day'>9</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+      <td><div class='day'>10</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+      <td><div class='day'>11</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+      <td><div class='day'>12</div><div class='shifts'><span class="WOOD">23-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">17-01 ARNOLD</span></div></td>
+      <td><div class='day'>13</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">17-01 ARNOLD</span></div></td>
+    </tr>
+
+    <tr>
+      <td><div class='day'>14</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
+      <td><div class='day'>15</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>16</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>17</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>18</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>19</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>20</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
+    </tr>
+
+    <tr>
+      <td><div class='day'>21</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>22</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
+      <td><div class='day'>23</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
+      <td><div class='day'>24</div><div class='shifts'><span class="POT">23-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
+      <td><div class='day'>25</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">05-23 ARNOLD</span></div></td>
+      <td><div class='day'>26</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">17-01 ARNOLD</span></div></td>
+      <td><div class='day'>27</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">17-01 ARNOLD</span></div></td>
+    </tr>
+
+    <tr>
+      <td><div class='day'>28</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
+      <td><div class='day'>29</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>30</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class='day'>31</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td class='empty'></td>
+      <td class='empty'></td>
+      <td class='empty'></td>
     </tr>
   </tbody>
 </table>
