--- a/schedule.html
+++ b/schedule.html
@@ -142,7 +142,7 @@
       </div>
       <div class="header-center">
         <p>Birmingham Twp PD Schedule</p>
-        <h1>September 2025</h1>
+        <h1>October 2025</h1>
       </div>
       <div class="header-right">
         <img src="patch.png" alt="Logo" class="header-logo">
@@ -223,7 +223,7 @@
     </tr>
       </tbody>
     </table>
-<div class="month-header">October 2025</div>
+<div class="month-header">November 2025</div>
 <table class="calendar">
   <thead>
     <tr>
@@ -244,12 +244,12 @@
 
     <tr>
       <td><div class="day">2</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
-      <td><div class="day">3</div><div class="shifts"><span class="POT">23-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
-      <td><div class="day">4</div><div class="shifts"><span class="POT">23-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class="day">3</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
+      <td><div class="day">4</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class="day">5</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class="day">6</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-      <td><div class="day">7</div><div class="shifts"><span class="POT">23-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-      <td><div class="day">8</div><div class="shifts"><span class="POT">23-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span></div></td>
+      <td><div class="day">7</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class="day">8</div><div class="shifts"><span class="POT">23-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
     </tr>
 
     <tr>
@@ -294,7 +294,7 @@
   </tbody>
 </table>
 
-<div class="month-header">November 2025</div>
+<div class="month-header">December 2025</div>
 <table class="calendar">
   <thead>
     <tr>
@@ -364,7 +364,7 @@
     </tr>
   </tbody>
 </table>
-<div class="month-header">December 2025</div>
+<div class="month-header">January 2026 *placeholder*</div>
 <table class="calendar">
   <thead>
     <tr>
