--- a/schedule.html
+++ b/schedule.html
@@ -245,7 +245,7 @@
     <tr>
       <td><div class="day">2</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td><div class="day">3</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
-      <td><div class="day">4</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class="day">4 CHIEF NELLING DAY</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class="day">5</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class="day">6</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class="day">7</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
